# ServeLLM

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  serve_server.ipynb  start_server.sh
app/: dependencies.py  main.py
app/core/: config.py  security.py
app/routers/v1/: chat.py  completions.py  embeddings.py  models.py
app/schemas/: openai.py
app/services/: auth.py  inference.py  llm_engine.py  local_engine.py  model_manager.py
app/utils/: errors.py  helpers.py
configs/: models.yaml
cookbook/: gpt-oss-embedding-server.ipynb  run-llm-server.ipynb
examples/: kaggle_notebook.py
llm_serve/: __init__.py  cli.py  config.py  launch.py  manager.py  server.py  tunnel.py
llm_serve/backends/: __init__.py  embeddings.py  llm.py
llm_serve/models/: __init__.py
llm_serve/routes/: __init__.py  chat.py  completions.py  embeddings.py
tests/: conftest.py  test_api.py  test_auth.py  test_models.py  test_routes.py
